fixed spacing for home

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ body > #root > div {
 
 
 div {
-    margin: auto;
+    /* margin: auto; */
     padding: 10px;
     text-align: center;
 }
@@ -147,6 +147,21 @@ input {
   width: 100px;
   text-align: center;
 }
+.home-container {
+  width: 100%;
+  min-width: 300px;
+  max-width: 500px;
+  height: 100%;
+  max-height: 800px;
+  background-color:#329da3;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: auto;
+  padding-bottom: 10%;
+}
+
 .container {
   width: 100%;
   min-width: 300px;
